--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,34 @@
 {% load static %}
 <div class="row ">
     <div class="col s10 push-s1">
-        <h1 class="blue-text text-lighten-1" align="center"><i class="medium material-icons ">wallpaper</i>Actividades</h1>
+        <h1 class="blue-text text-lighten-1" align="center"><i class="medium material-icons ">dashboard</i>{{evento.nombre}}</h1>
     </div>
 </div>
     <hr>
 
+    <div class="row">
+        <div class = "col s8 push-s2" >
+        <table>
+            <thead>
+              <tr>
+                  <th>Nombre</th>
+                  <th>Fecha</th>
+                  <th>Ver</th>
+              </tr>
+            </thead>
+            <tbody>
+            {% for i in actividades %}
+       
+              <tr>
+                <td>{{i.nombre}}</td>
+                <td>{{i.fecha}}</td>
+                <td> <a href="{% url 'actividad' i.pk %}"><i class="material-icons">remove_red_eye</i></a></td>
+              </tr>
+        {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    </div>
     
 <style>
     p{
