--- a/templates/user/edit.html
+++ b/templates/user/edit.html
@@ -13,12 +13,12 @@
     </div>
     <div class="input-field col s12" >
             <select class="select" type="text" name="semestre" id="id_semestre">
-                    <option value="1" selected>1er Semestre</option>
-                    <option value="3">3er Semestre</option>
-                    <option value="5">5nto Semestre</option>
-                    <option value="7">7mo Semestre</option>
-                    <option value="9">9no Semestre</option>
-                    <option value="11">11vo Semestre</option>
+                    <option value="2" selected>2do Semestre</option>
+                    <option value="4">4to Semestre</option>
+                    <option value="6">6to Semestre</option>
+                    <option value="8">8vo Semestre</option>
+                    <option value="10">10mo Semestre</option>
+                    <option value="12">12vo Semestre</option>
             </select>
             <label>Semetres cursado</label>
     </div>
