--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,8 +4,8 @@
 <nav hidden class="noprint light-blue darken-3" role="navigation">
     <div class="nav-wrapper noprint">
 
-      <a href="{% url 'index' %}" class="brand-logo">
-        <img src="{% static "img/nav.png" %}" alt="" height="79rem">
+      <a href="{% url 'index' %}" class="brand-logo center">
+        CONVIVE
       </a>
 
       <ul class="right hide-on-med-and-down">
