--- a/templates/login.html
+++ b/templates/login.html
@@ -9,8 +9,8 @@
     <div class="row">
      <br><br>
      <div hidden class="shower col m6 card-panel white offset-m3" style="text-align:center">
-       <h1 class="blue-text text-lighten-1">Congreso  UMG</h1>
-       <img src="{% static "img/logo.jpeg" %}" alt="" width="85%">       
+       <h1 class="blue-text text-lighten-1">Convive  UMG</h1>
+       <img src="{% static "img/logon.jpeg" %}" alt="" width="85%">       
        <br>
        <br>
        <a href="{% url 'social:begin' 'google-oauth2' %}?next=/" class="tooltipped" data-position="bottom" data-tooltip="Por favor utiliza solo correos de MiUmg.edu.gt">
