--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 <main hidden>
   <div class="container">
     <div class="row">
-      <div class="col l10 push-l1 m12 z-depth-3" style="margin-top:0.5rem">
+      <div class="col l10 push-l1 s12 z-depth-3" style="margin-top:0.5rem">
           {% block content %}
           {% endblock %}
       </div>
