--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <hr>
 
     <div class="row">
-        <div class = "col s8 push-s2" >
+        <div class = "col l8 push-l2 s12" >
         <table>
             <thead>
               <tr>
