--- a/templates/actividad/view.html
+++ b/templates/actividad/view.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load static %}
 <div class="row ">
-    <div class="col s10 push-s1">
+    <div class="col l10 push-l1 s12">
         <h1 class="blue-text text-lighten-1" align="center">{{actividad}} </h1>
         <h6 class="blue-text text-lighten-1" align="center">Fecha:{{actividad.fecha}} <br></h6>
 
@@ -11,7 +11,7 @@
         {% endif %}
     
 <hr>
-    <div class="col s10 push-s1" >
+    <div class="col l10 push-l1 s12" >
             <div class="container z-depth-1">
                 <br>
                 {% if request.user.is_staff %}
