--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,9 +16,15 @@
         <!-- Dropdown Structure -->
         <ul id='dropdown1' class='dropdown-content'>
           <li><a href="{% url 'logout'%}"><i class="material-icons">exit_to_app</i>Salir</a></li>
+          {% if request.user.is_staff %}
+            <li><a href="{% url 'semestres'%}"><i class="material-icons">assessment</i>Reportes</a></li>
+          {% endif %}
         </ul>
       <ul id="nav-mobile" class="sidenav noprint">
           <li><a href="{% url 'logout'%}"><i class="material-icons">exit_to_app</i>Salir</a></li>
+          {% if request.user.is_staff %}
+            <li><a href="{% url 'semestres'%}"><i class="material-icons">assessment</i>Reportes</a></li>
+          {% endif %}
       </ul>
 
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
