--- a/templates/reporte.html
+++ b/templates/reporte.html
@@ -6,13 +6,14 @@
 <div class="row ">
     <div class="col s10 push-s1">
         <h4 class="blue-text text-lighten-1" align="center">Semestre:{{semestre}}</h4>
+        <button id="printer" style="float: right;" class="noprint btn-floating btn-large waves-effect waves-light red"><i class="material-icons">print</i></button>
     </div>
 </div>
     <hr>
 
     <div class="row">
         <div class = "col s12" >
-        <table>
+        <table class="responsive-table" align="center" cellspacing="25">
             <thead>
               <tr>
                   <th>Carnet</th>
@@ -29,7 +30,7 @@
                         <td>{{i.carnet}}</td>
                         <td>{{i.user.first_name|title}} {{i.user.last_name|title}}</td>
                         {% for x in i.actividades %}
-                        <td><i class="material-icons">{{x}}</i></td>
+                        <td><i {% if x == "check" %} class="material-icons green-text" {% else %} class="material-icons red-text" {% endif %}  >{{x}}</i></td>
                         {% endfor %}           
                         <td>{{i.asis}}</td>
                     </tr>
@@ -48,5 +49,16 @@
 }
 
 </style>
+
+
+<script>
+    $( document ).ready(function() {
+        $("#printer").click(function() {
+            $(".noprint").attr("hidden","hidden");
+            window.print();
+            window.location.reload();
+        });
+    });
+</script>
 
 {% endblock %}
