--- a/templates/reporte.html
+++ b/templates/reporte.html
@@ -13,7 +13,7 @@
 
     <div class="row">
         <div class = "col s12" >
-        <table class="responsive-table" align="center" cellspacing="25">
+        <table class="responsive-table" align="center">
             <thead>
               <tr>
                   <th>Carnet</th>
@@ -48,6 +48,11 @@
   text-overflow: ellipsis;
 }
 
+tr>td {
+    padding-bottom: 2px;
+    padding-top: 2px;
+}
+
 </style>
 
 
@@ -57,6 +62,7 @@
             $(".noprint").attr("hidden","hidden");
             window.print();
             $(".noprint").removeAttr('hidden');
+            $(".noprint").removeAttr('style');
         });
     });
 </script>
